--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,7 @@
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>annotations</artifactId>
-      <version>3.0.0</version>
+      <version>3.0.1u2</version>
       <scope>compile</scope>
       <optional>true</optional>
     </dependency>
@@ -209,7 +209,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
-        <version>2.6.1</version>
+        <version>3.0.0</version>
         <configuration>
           <failOnError>false</failOnError>
           <filesets>
@@ -242,7 +242,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.5.5</version>
+        <version>2.6</version>
         <configuration>
           <finalName>${project.artifactId}</finalName>
           <outputDirectory>${project.releaseDir}</outputDirectory>
@@ -305,7 +305,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
-        <version>3.0.2</version>
+        <version>3.0.3</version>
         <configuration>
           <failOnError>false</failOnError>
           <excludeFilterFile>${basedir}/findbugs-exclude.xml</excludeFilterFile>
