--- a/src/main/resources/org/openestate/tool/helloworld/i18n.properties
+++ b/src/main/resources/org/openestate/tool/helloworld/i18n.properties
@@ -1,4 +1,4 @@
 #
-# Copyright (C) 2012-2018 OpenEstate.org
+# Copyright 2012-2019 OpenEstate.org
 #
 basename=org.openestate.tool.helloworld.resources.Messages
