--- a/src/main/resources/org/openestate/tool/helloworld/resources/HelloWorldPlugin.properties
+++ b/src/main/resources/org/openestate/tool/helloworld/resources/HelloWorldPlugin.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2012-2018 OpenEstate.org
+# Copyright 2012-2019 OpenEstate.org
 #
 ApiVersion=${project.apiVersion}
 Author=OpenIndex
