--- a/src/main/resources/org/openestate/tool/helloworld/resources/HelloWorldPlugin.properties
+++ b/src/main/resources/org/openestate/tool/helloworld/resources/HelloWorldPlugin.properties
@@ -1,8 +1,8 @@
 #
 # Copyright 2012-2019 OpenEstate.org
 #
-ApiVersion=${project.apiVersion}
+ApiVersion=${plugin.api}
 Author=OpenIndex
-AuthorWebsite=http://www.openindex.de/
-Version=${project.pluginVersion}
-Website=http://openestate.org/
+AuthorWebsite=https://openindex.de/
+Version=${plugin.version}
+Website=https://openestate.org/
