--- a/src/main/resources/org/openestate/tool/helloworld/resources/HelloWorldPlugin.properties
+++ b/src/main/resources/org/openestate/tool/helloworld/resources/HelloWorldPlugin.properties
@@ -1,8 +1,4 @@
-#
-# Copyright 2012-2019 OpenEstate.org
-#
+# Additional plugin settings, that are not covered by the PF4J descriptor.
 ApiVersion=${plugin.api}
-Author=OpenIndex
-AuthorWebsite=https://openindex.de/
-Version=${plugin.version}
-Website=https://openestate.org/
+AuthorWebsite=${plugin.providerWebsite}
+PluginWebsite=${plugin.website}
