--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.openestate.tool.plugins</groupId>
     <artifactId>OpenEstate-Tool-HelloWorld</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>OpenEstate-Tool-HelloWorld</name>
@@ -53,7 +53,7 @@
         <openestate.build.encoding>UTF-8</openestate.build.encoding>
         <openestate.build.javadocDir>${project.basedir}/apidocs</openestate.build.javadocDir>
         <openestate.build.packageDir>${project.basedir}/package</openestate.build.packageDir>
-        <openestate.immotool.version>1.0.0-SNAPSHOT</openestate.immotool.version>
+        <openestate.immotool.version>1.0.0</openestate.immotool.version>
 
         <!-- plugin settings -->
         <plugin.id>${project.artifactId}</plugin.id>
